--- a/higher-order-function/5.1.1.html
+++ b/higher-order-function/5.1.1.html
@@ -218,7 +218,13 @@
                 console.log(reduce([1,2,3,4],function(a,b){//扮演combine函数:a->current,b->array[i]
                         return a+b;//0+1->1:1+2->3:3+3->6:6+4->10
                 },0));
-
+                
+                    var  byName=[];
+                    ancestry.forEach(function(person){//一个名字对应该名字属于的对象
+                        byName[person.name]=person;
+                        });
+                    
+                    console.log(byName["Philibert Haverbeke"]);
 
 
 
