--- a/higher-order-function/5.1.3.html
+++ b/higher-order-function/5.1.3.html
@@ -105,6 +105,58 @@
                 console.log(some([NaN,3,4],isNaN));
 
                 console.log(some([2,3,4],isNaN));
+                
+                               function reduceAncestors(person,f,defaultValue){
+                    function valueFor(person){//定义一个内部valueFor函数
+                        if(person==null){
+                            return defaultValue;
+                        }else{
+                            return f(person,valueFor(byName[person.mother]),
+                                                    valueFor(byName[person.father])
+                            )
+                        }
+                    }
+                    return valueFor(person);//再在内部调用该valueFor函数
+                }
+
+                var byName={};
+                var ancestry=JSON.parse(ANCESTRY_FILE);
+
+                ancestry.forEach(function(person){
+                    byName[person.name]=person;
+                });
+
+
+                function  sharedDNA(person,fromMother,fromFather){
+                    if(person.name=="Pauwels van Haverbeke"){
+                        return 1;
+                    }else{
+                        return (fromMother+fromFather)/2;
+                    }
+                }
+
+                var  ph=byName["Philibert Haverbeke"];
+                console.log(reduceAncestors(ph,sharedDNA,0)/4);
+
+                function countAncestors(person,test){
+                    function combine(person,fromMother,fromFather){
+                        var thisOneCounts=test(person);
+                        return  fromMother+fromFather+(thisOneCounts ? 1:0);
+                    }
+                    return reduceAncestors(person,combine,0);
+                }
+
+                function longLivingPercentage(person){
+                    var all=countAncestors(person,function(person){
+                        return true;
+                    });
+                    var longLiving=countAncestors(person,function(person){
+                        return  (person.died-person.born)>=70;
+                    });
+                    return longLiving/all;
+                }
+
+                console.log(longLivingPercentage(byName["Emile Haverbeke"]));
 
 
 
